force-app/main/default/objects/Udemy_IntegrationAN__c/Udemy_IntegrationAN__c.object-meta.xml
<CustomObject>
    <description>Created from Udemy Integration MD Api DMEO with Auto Number</description>
    <label>Udemy IntegrationAN</label>
    <nameField>
        <displayFormat>UIMD-{00000}</displayFormat>
        <label>Udemy IntegrationAN Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Udemy Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>