force-app/main/default/objects/Udemy_IntegrationAN__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>&quot;904242&quot;</defaultValue>
    <description>This is the field created from Custom Metadata</description>
    <inlineHelpText>This is the field created from Custom Metadata</inlineHelpText>
    <label>Active</label>
    <length>60</length>
    <type>Text</type>
</CustomField>