force-app/main/default/objects/Udemy_IntegrationAN__c/fields/Course_Number__c.field-meta.xml
<CustomField>
    <fullName>Course_Number__c</fullName>
    <description>This is the field created from Custom Metadata</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the field created from Custom Metadata</inlineHelpText>
    <label>Course Number</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>