force-app/main/default/objects/Udemy_IntegrationAN__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>This is the field created from Custom Metadata</description>
    <inlineHelpText>This is the field created from Custom Metadata</inlineHelpText>
    <label>Duration</label>
    <length>60</length>
    <type>Text</type>
</CustomField>