force-app/main/default/objects/Udemy_IntegrationAN__c/fields/Extenal_Id__c.field-meta.xml
<CustomField>
    <fullName>Extenal_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is the field created from Custom Metadata</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the field created from Custom Metadata</inlineHelpText>
    <label>Extenal Id</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>