force-app/main/default/objects/Udemy_IntegrationAN__c/fields/Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Pin_Code__c</fullName>
    <defaultValue>&quot;904242&quot;</defaultValue>
    <description>This is the field created from Custom Metadata</description>
    <inlineHelpText>This is the field created from Custom Metadata</inlineHelpText>
    <label>Pin Code</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>