force-app/main/default/objects/Udemy_IntegrationAN__c/fields/Udemy_Integration__c.field-meta.xml
<CustomField>
    <fullName>Udemy_Integration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Lookup field related to Udemy_Integration__c Object</description>
    <inlineHelpText>This is the Lookup field related to Udemy_Integration__c Object</inlineHelpText>
    <label>Udemy Integration</label>
    <referenceTo>Udemy_Integration__c</referenceTo>
    <relationshipLabel>Udemy Integrations</relationshipLabel>
    <relationshipName>UdemyIntegration</relationshipName>
    <type>Lookup</type>
</CustomField>