force-app/main/default/objects/Udemy_IntegrationAN__c/fields/UdemyIntegration__c.field-meta.xml
<CustomField>
    <fullName>UdemyIntegration__c</fullName>
    <description>This is the MasterDetail field related to Udemy_Integration__c Object</description>
    <inlineHelpText>This is the MasterDetail field related to Udemy_Integration__c Object</inlineHelpText>
    <label>UdemyIntegration</label>
    <referenceTo>Udemy_Integration__c</referenceTo>
    <relationshipLabel>UdemyIntegrations</relationshipLabel>
    <relationshipName>Udemy_Integration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>