force-app/main/default/objects/Udemy_IntegrationAN__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>This is the field created from Custom Metadata</description>
    <inlineHelpText>This is the field created from Custom Metadata</inlineHelpText>
    <label>Zip Code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>